# emercoin-based-pki-protocol

./: README.md
device-manager/: .env  crypto.py  deviceconf.py  emercoin.py  main.py  revoke_device_key.py  transfer_device_ownership.py  update_config.py  update_device_key.py
device-manager/devices/kali-vm-1/: configuration  ek_cert.pem  iak.pem  local_pubkey.pem
device-manager/devices/rasp-pi-4-1/: configuration  ek_cert.crt  ek_cert.pem  iak.pem  local_pubkey.pem
device-manager/keys/: new_pubkey.pem  privkey.pem
ekc-inflater/: convert2pem.sh
images_source/chapter3/: auth_key_exchange.pptx  high-level-design.pptx  ownership.vsdx  registration.vsdx  revoke_example.pptx  testbed.vsdx  update.vsdx
images_source/chapter4/: testlab.vsdx  testlab2.vsdx
iot-device/: CMakeLists.txt  configuration  crypto.c  crypto.h  device-identity  idevid.h  initialization.c  initialization.h  jsmn.h  main.c  ownership.c  ownership.h  update.c  update.h  utils.c  utils.h
iot-device/certs/: cert.pem
iot-device/cli-build/: configuration  iot-device  protocol_client
iot-device/cli-build/certs/: cert.pem  ek-rsa2048.crt  ek-secp384r1.crt
iot-device/cli-build/keys/: rsa_privkey.pem  rsa_pubkey.pem
iot-device/cli-build/rand/: seedfile
iot-device/keys/: rsa_privkey.pem  rsa_pubkey.pem
iot-device/rand/: seedfile
mbedTLS/: ssl_conf
mbedTLS/build_mbedtls/: scripts
mbedTLS/build_mbedtls/cmake/: MbedTLSTargets.cmake
mbedTLS/build_mbedtls/tests/: compat.sh  context-info.sh  data_files  scripts  test_suite_aes.cbc  test_suite_aes.cbc.c  (+223 more)
mbedTLS/mbedtls/: CMakeLists.txt
(+79 files in other folders)
